cluster/platform/core/longhorn/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress-traefik
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.home.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
